--- a/package.json
+++ b/package.json
@@ -48,23 +48,38 @@
     "node": ">= 8"
   },
   "dependencies": {
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.19.0",
     "debug": "^4.1.1"
   },
   "peerDependencies": {
     "feathers": "*"
   },
   "devDependencies": {
-    "babel-cli": "^6.10.1",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-tape-runner": "^2.0.1",
-    "eslint": "^6.1.0",
+    "babel-tape-runner": "^3.0.0",
+    "eslint": "^6.8.0",
     "npm-watch": "^0.6.0",
-    "sinon": "^1.17.5",
-    "tap-spec": "^4.1.1",
-    "tape": "^4.6.0",
-    "tape-async": "^2.1.1"
+    "sinon": "^9.0.2",
+    "tap-spec": "^5.0.0",
+    "tape": "^4.13.2",
+    "tape-async": "^2.3.0"
+  },
+  "babel": {
+    "plugins": [
+      "add-module-exports"
+    ],
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "8"
+          }
+        }
+      ]
+    ]
   }
 }
